refactor(jc-visitor): rewrite visitor for labeled grammar and new AST nodes